Make weather update call async